# Drive-PI

./: LICENSE  README.md
backend/: .env.example  .gitignore  API.md  Automation_Custom_Script.old.sh  Automation_Custom_Script.sh  Cargo.toml  README.md  build-arm.bat  setup.sh  smb.conf
backend/http/: test.http
backend/public/: index.html
backend/public/assets/: index.40ef2fc6.js  index.44fecc6b.css  index.51906316.css  index.5274dfe7.js  index.971c04d1.js  index.98d62910.js  index.bc4cf655.js  index.d004eda5.js  index.d147548e.js  index.d78f959a.js  index.db89c22e.js  index.e03d5727.css  index.fb671656.css
backend/src/: main.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  drives.rs  errors.rs  files.rs  mod.rs
backend/src/routes/: app.rs  auth.rs  drives.rs  files.rs  mod.rs
backend/src/stores/: auth.rs
backend/src/utils/: dnsmasq.rs  drives.rs  files.rs  hotspot.rs  mod.rs  samba.rs
frontend/: .env.development  .env.production  copy-output.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  utils.ts  vite-env.d.ts
frontend/src/api/: models.ts  request.ts
frontend/src/assets/styles/: colors.scss  styles.scss
frontend/src/assets/styles/components/: auth.scss  (+4 more)
frontend/src/components/: AccessProvider.tsx  Auth.tsx  Drive.tsx  Drives.tsx  FileBrowser.tsx  Heading.tsx  Icons.tsx  Sidebar.tsx
frontend/src/components/icons/: BackIcon.tsx  FileIcon.tsx  FolderIcon.tsx  HomeIcon.tsx  LogoSide.tsx
frontend/src/routes/: Auth.tsx  Home.tsx
(+2 files in other folders)
