[package]
name = "drivepi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
env_logger = "0.9.0"
log = "0.4.17"
derive_more="0.99.17"
futures = "0.3.23"
rust-embed = "6.4.0"
mime_guess = "2.0.4"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]