[package]
name = "drivepi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.0"
dotenv = "0.15.0"
rand = "0.8.5"
env_logger = "0.9.0"
log = "0.4.17"
derive_more="0.99.17"
futures = "0.3.23"
rust-embed = "6.4.0"
mime_guess = "2.0.4"